# P10_SoftDesk_API

./: README.md  SoftDesk-Classes.puml  pyproject.toml  requirements.txt
src/Projects/: admin.py  models.py  serializers.py  views.py
src/Projects/migrations/: 0001_initial.py  0002_initial.py
src/Projects/tests/: test_models.py
src/SoftDesk_API/: asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
src/SoftDesk_API/tests/: test_urls.py
src/Users/: admin.py  models.py  permissions.py  serializers.py  views.py
src/Users/migrations/: 0001_initial.py  0002_remove_user_role.py
src/Users/tests/: test_models.py  test_permissions.py  test_serializers.py  test_views.py
